# code-reviewer

./: .gitignore  EVAL_RESULTS.md  README.md  action.yml  patch_trl.py  pyproject.toml  quantize_gguf.py  quantize_mlx.py  requirements-eval.txt  requirements-ood-eval.txt  requirements.txt  run_eval_batch.sh  setup_cloud.sh
.github/workflows/: review.yml
agentic/: agent.py  config.py  entrypoint.py  github_client.py  review_state.py
agentic/eval/: analyze.py  run_agent_eval.py
agentic/skills/: README.md  async-js.md  loader.py  nextjs.md  react.md  supabase.md  vite.md
agentic/tools/: __init__.py  action.py  execution.py  history.py  retrieval.py  skills.py
config/: config.prod.yaml  config_manager.py
cretu_testing/: README.md  bug_detection.py  build_dataset.py  cretu.txt  run_cretu_eval.py  score.py
docs/: eval-prompts.md  host-on-mac.md  quantize-on-mac.md
docs/paper/: main.tex
examples/: review.yml
experiments/: 001-system-prompt-checklist.md  002-skills-on-demand.md  README.md
ood_testing/: 100-syntetic.txt  COMMANDS.txt  ood_metrics.py  run_ood_eval.py
presentation/: main.tex
quantize/: quantize.py
rag/: __init__.py  database.py  embeddings.py  main.py  rag.md  routes.py  schemas.py  service.py
rag/eval/: retrieval_metrics.py
rag/scripts/: ingest_local.py  ingest_repository.py
rlhf/training/: grpo.py  grpo_config.yaml
sft/data/: download.py  download_labels.py  filter.py  preprocess.py  split.py
sft/eval/: deepeval_judge.py  defect_metrics.py  extract_for_human.py  false_positive.py  generate_via_api.py  judge.py  metrics.py  (+4 more)
(+3 files in other folders)
