[project]
name = "code-reviewer"
version = "0.1.0"
description = "Fine-tuned LLM for automated pull request code review"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "transformers>=4.41",
    "trl>=0.9",
    "peft>=0.11",
    "accelerate>=0.31",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pandas>=2.2",
    "requests>=2.32",
]

[project.optional-dependencies]
train = [
    "torch>=2.3",
    "bitsandbytes>=0.43",
    "xformers>=0.0.26",
    # Unsloth installed separately via their pip command
]
eval = [
    "sacrebleu>=2.4",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "anthropic>=0.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["sft*"]
